--- a/config/cable.yml
+++ b/config/cable.yml
@@ -5,6 +5,6 @@ test:
   adapter: async
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  adapter: redis #si on veut que Heroku marche on remplace redis par async
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %> #supprimer les deux lignes suivantes
   channel_prefix: LP4B_production
